hopefully resolve weird pixel issue on mobile devices

--- a/src/index.css
+++ b/src/index.css
@@ -204,6 +204,7 @@ a {
   font-weight: 700;
   transition: color 0.6s ease;
   display: inline-block;
+  padding: 0 2px;
 }
 
 a:hover {
